--- a/IngresoPersona.html
+++ b/IngresoPersona.html
@@ -5,22 +5,73 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Iniciar sesión</title>
-    <link rel="stylesheet" type="text/css" rel="noopener" target="_blank" href="login.css">
+    <link rel="stylesheet" type="text/css" rel="noopener" target="_blank" href="IngresoPersona.css">
 </head>
 <body>
-    <form class="form-signin">
-        <h1 class="h3 mb-3 font-weight-normal">Inicio de sesión</h1>
+    <form class="form-create-employee">
+        <h1 class="h3 mb-3 font-weight-normal">Creación de empleado</h1>
+        <div class="container">
+        <p>Nombres del empleado</p>
+        <label for="inputName" class="sr-only">Nombres</label>
+        <input type="general" id="inputNames" class="form-control" >
+        </div>
+        <div class="container">
+        <p>Primer apellido</p>
+        <label for="inputFirstLM" class="sr-only">PrimerApellido</label>
+        <input type="general" id="inputFirstLM" class="form-control" >
+        </div>  
+        <div class="container">
+        <p>Segundo apellido</p>
+        <label for="inputSecondLM" class="sr-only">SegundoApellido</label>
+        <input type="general" id="inputSecondLM" class="form-control" >
+        </div>  
+        <div class="container">
+            <p>DPI</p>
+            <label for="inputDPI" class="sr-only">DPI</label>
+            <input type="general" id="inputDPI" class="form-control" >
+            </div>  
+        <div class="container">
+            <p>Email</p>
+            <label for="inputEmail" class="sr-only">Email</label>
+            <input type="general" id="inputEmail" class="form-control" >
+            </div>  
+        <div class="container">
+                <p>Teléfono</p>
+                <label for="inputPhone" class="sr-only">Teléfono</label>
+                <input type="general" id="inputTelefono" class="form-control" >
+                </div>  
+        <div class="container">
+                <p>Celular</p>
+                <label for="inputCellPhone" class="sr-only">Celular</label>
+                <input type="general" id="inputCelular" class="form-control" >
+                </div>  
+        <div class="container">
+                <p>Salario</p>
+                <label for="inputSalary" class="sr-only">Salario</label>
+                <input type="general" id="inputSalario" class="form-control" placeholder="Q.0">
+                </div>  
+        <div class="container">
+            <p>Rol</p>
+            <label for="inputRol" class="sr-only">Rol</label>
+            <input type="general" id="inputRol" class="form-control" placeholder="Empleado">
+            </div>
+        <div class="container">
+                <p>Titulo del puesto</p>
+                <label for="inputTitle" class="sr-only">TituloDelPuesto</label>
+                <input type="general" id="inputTituloDelPuesto" class="form-control">
+                </div>
         <div class="container">
         <p>Usuario</p>
         <label for="inputUser" class="sr-only">Usuario</label>
-        <input type="user" id="inputUser" class="form-control" >
+        <input type="general" id="inputUser" class="form-control" >
         </div>
         <div class="container">
         <p>Contraseña</p>
         <label for="inputPassword" class="sr-only">Contraseña</label>
         <input type="password" id="inputPassword" class="form-control" >
-        <button class="btn btn-lg btn-primary btn-block" type="submit">Ingresar</button>
         </div>  
+        <button class="btn btn-lg btn-primary btn-block" type="submit">Crear empleado</button>
+
     </form>
 </body>
 </html>
