--- a/ModificarPersona.html
+++ b/ModificarPersona.html
@@ -4,73 +4,73 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Creación de empleado</title>
-    <link rel="stylesheet" type="text/css" rel="noopener" target="_blank" href="IngresoPersona.css">
+    <title>Modfificar datos de empleado</title>
+    <link rel="stylesheet" type="text/css" rel="noopener" target="_blank" href="ModificarPersona.css">
 </head>
 <body>
-    <form class="form-create-employee">
-        <h1 class="h3 mb-3 font-weight-normal">Creación de empleado</h1>
+    <form class="form-modify-employee">
+        <h1 class="h3 mb-3 font-weight-normal">Modificar datos de empleado</h1>
         <div class="container">
         <p>Nombres del empleado</p>
         <label for="inputName" class="sr-only">Nombres</label>
-        <input type="general" id="inputNames" class="form-control" >
+        <input type="general" id="inputNames" class="form-control" value="Javier Andrés">
         </div>
         <div class="container">
         <p>Primer apellido</p>
         <label for="inputFirstLM" class="sr-only">PrimerApellido</label>
-        <input type="general" id="inputFirstLM" class="form-control" >
+        <input type="general" id="inputFirstLM" class="form-control" value="Morales">
         </div>  
         <div class="container">
         <p>Segundo apellido</p>
         <label for="inputSecondLM" class="sr-only">SegundoApellido</label>
-        <input type="general" id="inputSecondLM" class="form-control" >
+        <input type="general" id="inputSecondLM" class="form-control" value="González">
         </div>  
         <div class="container">
             <p>DPI</p>
             <label for="inputDPI" class="sr-only">DPI</label>
-            <input type="general" id="inputDPI" class="form-control" >
+            <input type="general" id="inputDPI" class="form-control" value="1210219">
             </div>  
         <div class="container">
             <p>Email</p>
             <label for="inputEmail" class="sr-only">Email</label>
-            <input type="general" id="inputEmail" class="form-control" >
+            <input type="general" id="inputEmail" class="form-control" value="some.email@gmail.com">
             </div>  
         <div class="container">
                 <p>Teléfono</p>
                 <label for="inputPhone" class="sr-only">Teléfono</label>
-                <input type="general" id="inputTelefono" class="form-control" >
+                <input type="general" id="inputTelefono" class="form-control" value="24242626">
                 </div>  
         <div class="container">
                 <p>Celular</p>
                 <label for="inputCellPhone" class="sr-only">Celular</label>
-                <input type="general" id="inputCelular" class="form-control" >
+                <input type="general" id="inputCelular" class="form-control" value="55555555">
                 </div>  
         <div class="container">
                 <p>Salario</p>
                 <label for="inputSalary" class="sr-only">Salario</label>
-                <input type="general" id="inputSalario" class="form-control" placeholder="Q.0">
+                <input type="general" id="inputSalario" class="form-control" placeholder="Q.39,000">
                 </div>  
         <div class="container">
             <p>Rol</p>
             <label for="inputRol" class="sr-only">Rol</label>
-            <input type="general" id="inputRol" class="form-control" placeholder="Empleado">
+            <input type="general" id="inputRol" class="form-control" placeholder="Empleado" value="Jefe de departamento">
             </div>
         <div class="container">
                 <p>Titulo del puesto</p>
                 <label for="inputTitle" class="sr-only">TituloDelPuesto</label>
-                <input type="general" id="inputTituloDelPuesto" class="form-control">
+                <input type="general" id="inputTituloDelPuesto" class="form-control" value="Jefe del departamento de I&D">
                 </div>
         <div class="container">
         <p>Usuario</p>
         <label for="inputUser" class="sr-only">Usuario</label>
-        <input type="general" id="inputUser" class="form-control" >
+        <input type="general" id="inputUser" class="form-control" value="user1">
         </div>
         <div class="container">
         <p>Contraseña</p>
         <label for="inputPassword" class="sr-only">Contraseña</label>
-        <input type="password" id="inputPassword" class="form-control" >
+        <input type="password" id="inputPassword" class="form-control" value="some.password">
         </div>  
-        <button class="btn btn-lg btn-primary btn-block" type="submit">Crear empleado</button>
+        <button class="btn btn-lg btn-primary btn-block" type="submit">Modificar Datos</button>
 
     </form>
 </body>
